tests/compile/activation_request_field_type_mismatch.stderr
error[E0308]: mismatched types
  --> tests/compile/activation_request_field_type_mismatch.rs:16:1
   |
16 | #[plexus_macros::activation(namespace = "test", version = "1.0.0", request = TestRequest, crate_path = "plexus_core")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u32`, found `String`
...
21 |         #[activation_param] auth_token: u32,
   |                                         --- expected due to this
   |
   = note: this error originates in the attribute macro `plexus_macros::activation` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `auth_token`
  --> tests/compile/activation_request_field_type_mismatch.rs:21:29
   |
21 |         #[activation_param] auth_token: u32,
   |                             ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_auth_token`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
